--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,6 @@
-﻿name: Bug report
+name: Bug report
 description: Report a bug in CSharp Wrapper Generator for GDExtension
 body:
-
   - type: markdown
     attributes:
       value: |
@@ -10,7 +9,6 @@ body:
         - The golden rule is to **always open *one* issue for *one* bug**. If you notice several bugs and want to report them, make sure to create one new issue for each of them.
         - Search [open](https://github.com/Delsin-Yu/CSharp-Wrapper-Generator-for-GDExtension/issues) and [closed](https://github.com/Delsin-Yu/CSharp-Wrapper-Generator-for-GDExtension/issues?q=is%3Aissue+is%3Aclosed) issues to ensure it has not already been reported. If you don't find a relevant match or if you're unsure, don't hesitate to **open a new issue**. The bugsquad will handle it from there if it's a duplicate.
         - Verify that you are using a [supported Godot version](https://docs.godotengine.org/en/latest/about/release_policy.html).
-
   - type: input
     attributes:
       label: Godot version
@@ -20,7 +18,6 @@ body:
       placeholder: 3.3.stable, 4.0.dev (3041becc6)
     validations:
       required: true
-
   - type: input
     attributes:
       label: Godot .NET packages version
@@ -29,7 +26,6 @@ body:
       placeholder: 3.3.stable, 4.0.dev (3041becc6)
     validations:
       required: true
-
   - type: input
     attributes:
       label: System information
@@ -40,7 +36,6 @@ body:
       placeholder: Windows 10, Intel Core i5-7200U
     validations:
       required: true
-
   - type: input
     attributes:
       label: .NET information
@@ -48,7 +43,6 @@ body:
         Include the output of the `dotnet --info` command. This contains important information for contributors to diagnose your issue, like the installed .NET SDKs and runtimes, and the environment variables.
     validations:
       required: true
-
   - type: textarea
     attributes:
       label: Issue description
@@ -57,7 +51,6 @@ body:
         You can include images or videos with drag and drop, and format code blocks or logs with <code>```</code> tags.
     validations:
       required: true
-
   - type: textarea
     attributes:
       label: Steps to reproduce
@@ -66,7 +59,6 @@ body:
         If you include a minimal reproduction project below, you can detail how to use it here.
     validations:
       required: true
-
   - type: textarea
     attributes:
       label: Minimal reproduction project
