Support basic support of generating gdunit4 tests (Instantiate only)

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ tests/metadata.json
 # Godot ignores
 GDTask/nupkg
 GDExtensionWrappers/
+GDExtensionWrappers.Tests/
 
 *~*
 addons/debug_draw_3d/gen
