--- a/addons/csharp_wrapper_generator_for_gdextension/plugin.cfg
+++ b/addons/csharp_wrapper_generator_for_gdextension/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="CSharp Wrapper Generator for GDExtension"
+name="CSharp Wrapper Generator for GDExtension 2"
 description="This editor plugin generates C# wrappers for classes from the GDExtension plugins."
 author="DE-YU"
-version="1.0"
+version="2.0"
 script="WrapperGeneratorMain.cs"
