--- a/GDExtensionAPIGenerator.csproj
+++ b/GDExtensionAPIGenerator.csproj
@@ -5,5 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="gdUnit4.api" Version="4.3.1" />
+<!--    <Compile Remove="./GDExtensionWrappers/*" />-->
+<!--    <Resource Include="./GDExtensionWrappers/*" CopyToOutputDirectory="Never" CopyToPublishDirectory="Never"/>-->
   </ItemGroup>
 </Project>
